--- a/ddaep/src/SkinsGallery/SkinsGallery.css
+++ b/ddaep/src/SkinsGallery/SkinsGallery.css
@@ -3,16 +3,69 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    padding: 20px;
 }
 
 .skinCard {
     border: 1px solid #ddd;
     padding: 10px;
     width: 200px;
-    text-align: center;
+    position: relative;
 }
 
-.skinCard img {
+.skinImageContainer {
+    position: relative;
+}
+
+.tradeableBadge {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #2ecc71;
+    color: white;
+    padding: 2px 10px;
+    border-radius: 20px;
+    font-weight: bold;
+}
+
+.skinImageContainer img {
     width: 100%;
     height: auto;
 }
+
+.skinInfo {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.skinPrice {
+    color: green;
+    font-size: 24px;
+    margin: 0;
+}
+
+.suggestedPrice {
+    text-decoration: line-through;
+    color: #777;
+    margin: 0;
+}
+
+.skinName {
+    font-weight: bold;
+    margin: 5px 0;
+}
+
+.skinType {
+    color: #777;
+    font-size: 12px;
+    margin: 0;
+}
+
+.skinFloatBar {
+    width: 100%;
+    height: 5px;
+    background-color: #ddd;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
